# pyxdr

./: README.md  pyproject.toml
src/: pyxdr.py
src/pyxdr/: __init__.py  xdrgen.py
tests/: test_xdr.py  test_xdrgen.py
