[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyxdr"
version = "0.1"
dependencies = [
    "attrs",
]
requires-python = ">=3.9"
authors = [
  {name = "Ignacio Martinez Vazquez", email = "ignamv@gmail.com"},
]
description = "Python library for XDR (RFC 1014) serialization/deserialization"
readme = "README.rst"
license = {file = "LICENSE.txt"}
keywords = ["xdr", "rfx1014", "serialization", "deserialization"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
[project.optional-dependencies]
dev = ["pytest","ruff","pre-commit"]
[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
"Bug Tracker" = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"
[tool.hatch.envs.default.scripts]
dev = [
    "pip install -e.[dev]",
    "pre-commit install",
]
test = "pytest"
format = "ruff format"
lint = "ruff check src tests"
[tool.hatch.build.targets.wheel]
packages = ["src/pyxdr.py"]
